all necessary changes have been made based on comments on previous commits
